--- a/main_list/static/css/blog.css
+++ b/main_list/static/css/blog.css
@@ -19,11 +19,15 @@ body {
     align-self: flex-start;
     margin-left: 200px;
     text-align: right;
-    font-size: 12pt;
+    font-size: 20px;
+}
+.page-header-right a {
+    color: #fff;
 }
 .date-right{
         font-size: 24pt;
         font-family: 'Crimson Text', serif;
+        color: white;
 }
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #ffffff;
@@ -45,71 +49,70 @@ h1, h2, h3, h4 {
 
 
 
-/*.save {*/
-/*    float: right;*/
-/*}*/
+.save {
+    float: right;
+}
 
-/*.post-form textarea, .post-form input {*/
-/*    width: 100%;*/
-/*}*/
+.post-form textarea, .post-form input {
+    width: 100%;
+}
 
-/*.top-menu, .top-menu:hover, .top-menu:visited {*/
-/*    color: #ffffff;*/
-/*    float: right;*/
-/*    font-size: 26pt;*/
-/*    margin-right: 20px;*/
-/*}*/
+.top-menu, .top-menu:hover, .top-menu:visited {
+    color: #ffffff;
+    font-size: 26pt;
+    margin-right: 20px;
+}
 
-/*.post {*/
-/*    margin-bottom: 70px;*/
-/*}*/
-/*.post header{*/
-/*    display: flex;*/
-/*    align-items: flex-end;*/
-/*    margin-bottom: 24px;*/
-/*}*/
-/*.header-buttons {*/
-/*    margin-left: auto;*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*}*/
-/*.post header .btn {*/
-/*    margin-right: 8px;*/
-/*}*/
-/*.post h1 {*/
-/*    margin-right: 14px;*/
-/*    margin-bottom: 0;*/
-/*    line-height: 1;*/
-/*}*/
-/*.post h1 a, .post h1 a:visited {*/
-/*    color: #000000;*/
-/*}*/
+.post {
+    margin-bottom: 70px;
+}
+.post header{
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 24px;
+}
+.header-buttons {
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+}
+.post header .btn {
+    margin-right: 8px;
+}
+.post h1 {
+    margin-right: 14px;
+    margin-bottom: 0;
+    line-height: 1;
+}
+.post h1 a, .post h1 a:visited {
+    color: #000000;
+}
 
-/*.day{*/
-/*    color: #426E95;*/
-/*    font-size: 24px;*/
-/*    margin: 28px 0 14px 0;*/
-/*}*/
-/*.weatherdata{*/
-/*    border-collapse: collapse; !*границы друг на друга*!*/
-/*    font-size: 16px;*/
-/*    width: 800px;*/
-/*}*/
+.day{
+    color: #426E95;
+    font-size: 24px;
+    margin: 28px 0 14px 0;
+}
+.weatherdata{
+    border-collapse: collapse; /*границы друг на друга*/
+    font-size: 16px;
+    width: 800px;
+}
 
-/*.weatherdata th{*/
-/*    font-weight: 700;*/
-/*    background: #efefef;*/
-/*    border: 1px solid #cdcdcd;*/
-/*    padding: 8px;*/
-/*    text-align: center;*/
-/*}*/
+.weatherdata th{
+    font-weight: 700;
+    background: #efefef;
+    border: 1px solid #cdcdcd;
+    padding: 8px;
+    text-align: center;
+}
 
-/*.weatherdata td{*/
-/*    border: 1px solid #cdcdcd;*/
-/*    padding: 4px 8px;*/
-/*    text-align: center;*/
-/*}*/
+.weatherdata td{
+    border: 1px solid #cdcdcd;
+    padding: 4px 8px;
+    text-align: center;
+}
 
-/*.comment{*/
-/*    margin: 20px 0px 20px 20px;*/
-/*}*/
+.comment{
+    margin: 20px 0px 20px 20px;
+}
